# spoke

./: .gitignore  Cargo.toml  README.md
infra/: Caddyfile  conduit.dev.toml  docker-compose.dev.yml  docker-compose.yml  livekit.dev.yaml  livekit.yaml
spoke-app/: Cargo.toml
spoke-app/src/: app.rs  bridge.rs  main.rs
spoke-core/: Cargo.toml
spoke-core/examples/: connect.rs
spoke-core/src/: lib.rs
spoke-core/src/matrix/: client.rs  error.rs  mod.rs
spoke-core/src/state/: mod.rs
spoke-core/src/voice/: audio.rs  events.rs  mod.rs
spoke-sidecar/: Cargo.toml
spoke-sidecar/src/: main.rs
