[package]
name = "spoke-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spoke"
path = "src/main.rs"

[dependencies]
spoke-core = { path = "../spoke-core" }
matrix-sdk = { version = "0.8", features = ["sqlite"] }
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
