[package]
name = "spoke-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
matrix-sdk = { version = "0.8", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
serde_json = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
