[package]
name = "spoke-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spoke-sidecar"
path = "src/main.rs"

[dependencies]
livekit-api = { version = "0.4", features = ["access-token"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
